--- a/Public/styles/style.css
+++ b/Public/styles/style.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;  
 }
+
 body {
     margin: 0;
     background-image: url(../images/fondo-1-1920x1080-dark.jpg);
@@ -9,13 +10,23 @@ body {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    
     display: flex;
     flex-direction: column;
-    min-height: 90vh;
+    min-height: 100vh;
   }
 
 main{
-    margin-top: 110px;
+    margin-top: 100px;
+}
+/* Color para cambiar el color-fondo de navBar y footer */
+.backgrounds{
+    background-color: #010301 !important;
+}
+
+/* Estilo para cambiar el text color */
+.text-color{
+    color: #50ef50 !important;
 }
 
 /*Este contendor contiene el estilo para dejar la navbar de boostrap en la parte superior 
@@ -38,28 +49,7 @@ de la pagina aunque el usuario haga scroll*/
     */
     z-index: 1030;;
 }
-
-.backgrounds{
-    background-color: #010301 !important;
-}
-
-.text-color{
-    color: #50ef50 !important;
-}
-
-.grafic{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.chart{
-    margin: 10px !important;
-    width: 75% !important;
-    height: 75% !important;
-    align-items: center;
-    justify-content: center;
-}
-
+/* Container para seleccionar el digimon */
 .cont1{
     margin: 25px;
     display: flex;
@@ -70,15 +60,34 @@ de la pagina aunque el usuario haga scroll*/
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
 }
+/* Div para crear el grid con los divs  */
+.grid{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+    margin-right: 5px;
+}
+
 .cont2{
-    margin: 20px;
+ /*    margin: 10px; 
+    width: 40%;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
+    margin-right: 1%; */
+
+    margin: 10px 1% 10px 10px;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .card{
+    margin-left: 42%;
+    padding: 15px;
     opacity: 80%;
     background-color: #010301;
     color: aliceblue;
@@ -87,20 +96,168 @@ de la pagina aunque el usuario haga scroll*/
     text-align: justify;
 }
 
-.footer{
+.grafic{
+
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chart{
+    margin-right: 35%;
+    width: 60% !important;
+    height: 40% !important;
+}
+
+.piePagina {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 10px;
-    background-color: #010301 !important;
-    color: #50ef50 !important;
-    position: fixed;
+    margin-top: auto;
     bottom: 0;
     width: 100%;
+    color: #fff !important;
 }
 
-#Footer {
-    margin-top: auto;
-    color: #fff !important;
+/*  */
+
+/* Para 960px */
+@media only screen and (max-width: 980px) and (min-width: 821px) {
+    .grid{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .cont2 {
+        /* margin: 10px 1% 10px 10px; */
+        width: 90%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .card {
+        margin-left: 0%; 
+       padding: 15px;
+       opacity: 80%;
+       background-color: #010301;
+       color: aliceblue;
+       justify-content: center !important;
+       align-items: center !important;
+       text-align: justify;
+   }
+
+}
+
+
+@media only screen and (max-width: 820px) and (min-width: 621px) {
+    .grid{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .cont2 {
+        /* margin: 10px 1% 10px 10px; */
+        width: 90%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .card {
+        margin-left: 0%; 
+       padding: 15px;
+       opacity: 80%;
+       background-color: #010301;
+       color: aliceblue;
+       justify-content: center !important;
+       align-items: center !important;
+       text-align: justify;
+   }
+}
+
+
+@media only screen and (max-width: 620px) and (min-width: 501px) {
+    .grid{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .cont2 {
+        /* margin: 10px 1% 10px 10px; */
+        width: 90%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .card {
+        margin-left: 0%; 
+        padding: 15px;
+        opacity: 80%;
+        background-color: #010301;
+        color: aliceblue;
+        justify-content: center !important;
+        align-items: center !important;
+        text-align: justify;
+   }
+}
+
+
+/* Para 480px */
+@media only screen and (max-width: 500px) and (min-width: 341px) {
+    .grid{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .cont2 {
+        /* margin: 10px 1% 10px 10px; */
+        width: 90%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .card {
+        margin-left: 0%; 
+       padding: 15px;
+       opacity: 80%;
+       background-color: #010301;
+       color: aliceblue;
+       justify-content: center !important;
+       align-items: center !important;
+       text-align: justify;
+   }
+}
+
+/* Para 320px */
+@media only screen and (max-width: 340px) and (min-width: 5px) {
+    .grid{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }   
+    .cont2 {
+        /* margin: 10px 1% 10px 10px; */
+        width: 90%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .card {
+         margin-left: 0%; 
+        padding: 15px;
+        opacity: 80%;
+        background-color: #010301;
+        color: aliceblue;
+        justify-content: center !important;
+        align-items: center !important;
+        text-align: justify;
+    }
 }
